# Datathon-G1-FIAP

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
app/: backend.py  data_service.py  dtos.py  main.py  recomendation_service.py
app/model/: analise_exploratoria.ipynb  data_transformation.ipynb  kmeans.pkl  last_news.csv  model_training.ipynb  todays_news.ipynb  user_clustering.ipynb  vectorizer.pkl
