[tool.poetry]
name = "datathon-g1-fiap"
version = "0.1.0"
description = ""
authors = ["felixmarcelo <felixmarcelo.mf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
