[tool.poetry]
name = "datathon-g1-fiap"
version = "0.1.0"
description = ""
authors = ["felixmarcelo <felixmarcelo.mf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
nltk = "^3.9.1"
joblib = "^1.4.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
